<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simplest Reminder Pro</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_create_new_reminder">Create New Reminder</string>
    <string name="new_reminder">New Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="nice_menu_plus">+</string>
    <string name="menu_show_reminders">Show Reminders</string>
    <string name="newReminderTitle">Remind me…</string>
    <string name="date">Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="time">Time</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="sample_time">12:35 PM</string>
    <string name="sample_date">Every Wednesday</string>
    <string name="sample_reminder_title">Sample Reminder Title</string>
    <string name="sample_status">Inactive</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="snooze">Snooze</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="affinity_dialogs">Dialogs</string>
    <string name="title_activity_set_date">Set Date</string>
    <string name="title_activity_set_time">Set Time</string>
    <string name="title_activity_list_reminders">List of Reminders</string>
    <string name="title_activity_popup_dialog">Popup Dialog</string>
    <string name="scheduledRemindersTitle">Scheduled reminders:</string>
    <string name="viewScheduledReminders">View Reminders</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="menu_show_number_of_reminders">Show Number of Reminders</string>
    <string name="menu_save_reminder">Save Reminder</string>
    <string name="menu_help">Help</string>
    <string name="settings_vibration_category_title">Vibration</string>
    <string name="settings_vibrate">Use Vibration?</string>
    <string name="settings_vibrate_summary">Should the device vibrate when reminder goes off?</string>
    <string name="settings_vibration_pattern">Vibration Pattern</string>
    <string name="settings_popup_dialog">Use Popup Dialog?</string>
    <string name="settings_popup_dialog_category_title">Popup Dialog</string>
    <string name="settings_popup_dialog_summary">Should a popup be displayed when reminder goes off?</string>
    <string name="settings_pickers">Use New, Analog Style Pickers?</string>
    <string name="settings_pickers_category_title">Pickers Style</string>
    <string name="settings_pickers_summary">Should new, analog style of date and time pickers be used?</string>
    <string name="settings_vibration_pattern_summary">Specify vibration pattern. Format: pause, length, pause, length etc. Values in milliseconds. Leave blank for default</string>
    <string name="settings_vibration_pattern_dialog_title">Enter Vibration Pattern or Leave Blank for Default</string>
    <string name="settings_vibration_pattern_default">50,500,300,500,300,500</string>
    <string name="settings_ringtone_category_title">Notification Sound</string>
    <string name="settings_ringtone">Use Notification Sound?</string>
    <string name="settings_ringtone_summary">Should the device play a notification sound when reminder goes off?</string>
    <string name="settings_ringtone_style">Pick a Notification Sound</string>
    <string name="settings_ringtone_style_summary">Click here to choose notification sound</string>
    <string name="settings_led_category_title">LED Light</string>
    <string name="settings_led">Flash LED Light?</string>
    <string name="settings_led_summary">Should the LED Light flash when reminder goes off?</string>
    <string name="settings_screen_category_title">Screen</string>
    <string name="settings_screen">Turn Screen On?</string>
    <string name="settings_screen_summary">Should the screen be turned on when reminder goes off?</string>
    <string name="settings_swipe_away_category_title">Notification Interaction</string>
    <string name="settings_swipe_away">Swipe Away to Delete?</string>
    <string name="settings_swipe_away_summary">Should the reminder be deleted when you clear its notification by either swiping it away or clearing all notifications?</string>
    <string name="settings_snooze_category_title">Snooze</string>
    <string name="settings_snooze_length">Snooze Length</string>
    <string name="settings_snooze_length_summary">Specify snooze length in minutes. Leave blank for default (15 minutes)</string>
    <string name="settings_snooze_length_dialog_title">Enter Snooze Length (Minutes)</string>
    <string name="settings_snooze_length_default">15</string>
    <string name="settings_repetition_category_title">Notification Repetition</string>
    <string name="settings_repetition">Repeat Alarm Until Attended?</string>
    <string name="settings_repetition_summary">Should the reminder\'s alarm be repeated until attended? Please keep in mind that due to changes in Android 4.4 and up enabling this may make reminders to go off little later than scheduled and repeat at irregular intervals. I am working on alternative solution!</string>
    <string name="settings_repetition_interval">Repetition Interval</string>
    <string name="settings_repetition_interval_summary">Specify how often the alarm will be repeated. Leave blank for default (10 minutes)</string>
    <string name="settings_repetition_interval_dialog_title">Enter repetition interval (Minutes)</string>
    <string name="settings_repetition_interval_default">10</string>
    <string name="repeat_none">No Repeating</string>
    <string name="repeat_daily">Repeat Daily</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="repeat_monthly">Repeat Monthly</string>
    <string name="repeat_annually">Repeat Annually</string>
    <string name="repeat_weekdays">Repeat on Weekdays</string>
    <string name="repeat_weekends">Repeat on Weekends</string>
    <string name="single_occurrence_copy">[single occurrence copy]</string>
    <string name="faq">F.A.Q.</string>
    <string name="delete_reminder_help_title">How to delete recurring reminder?</string>
    <string name="delete_reminder_help_info">The ONLY way to delete recurring reminder is to long press on the reminder in the list. Delete menu will show up. Simply press OK</string>
    <string name="remove_repeating_help_title">Why are my reminders annoying and keep repeating until I shut them up?</string>
    <string name="remove_repeating_help_info">I received many requests for that feature but you can easily disable it in settings. This option is called \"Repeat Alarm Until Attended\". Just remove checkmark next to it.</string>
    <string name="duplicate_reminders_help_title">Why do I see duplicate reminders?</string>
    <string name="duplicate_reminders_help_info">That is nothing to worry about. You should only see those if you happen to snooze recurring reminder. Duplicate is created to make sure that you do not accidentally delete recurring reminder.</string>
    <string name="snoozed_recurring_help_title">What if I snooze recurring reminder?</string>
    <string name="snoozed_recurring_help_info">A single-occurrence copy of your recurring reminder will be created. Your recurring reminder will not be affected and it will go off at regularly scheduled time. Please keep in mind that any changes made to the single-occurrence copy will not modify your recurring reminder.  </string>
    <string name="swipe_away_help_title">I swiped away the notification and my reminder is gone!</string>
    <string name="swipe_away_help_info">By default when you clear notification the reminder associated with it is removed from database. This is a new feature but this can be easily disabled from the settings menu. Simply remove checkbox next to \"Swipe Away to Delete\"</string>
    <string name="recurrence_conflict_weekdays">Reminder is for weekdays but you chose to start on a weekend\n\nYou can proceed or change starting date</string>
    <string name="recurrence_conflict_weekends">Reminder is for weekends but you chose to start on a weekday\n\nYou can proceed or change starting date</string>
    <string name="recurrence_conflict_title">Information</string>
    <string name="proceed">Proceed</string>
    <string name="change_date">Change Date</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="action_settings">Settings</string>

    <dimen name="small_margin">4dp</dimen>
    <dimen name="medium_margin">8dp</dimen>
    <dimen name="medium_plus_margin">10dp</dimen>
    <dimen name="large_margin">16dp</dimen>
    <dimen name="xl_margin">24dp</dimen>
    <dimen name="xxl_margin">48dp</dimen>

    <color name="light_grey">#efefef</color>
    <color name="dark_grey">#333</color>
    <color name="nice_blue">#0081c5</color>
    <color name="white">#FFFFFF</color>
    <color name="off_white">#EFEFEF</color>

    <!-- MATERIAL COLORS -->
    <!-- Light Blue -->
    <color name="material_light_blue_50">#E1F5FE</color>
    <color name="material_light_blue_100">#B3E5FC</color>
    <color name="material_light_blue_200">#81D4FA</color>
    <color name="material_light_blue_300">#4FC3F7</color>
    <color name="material_light_blue_400">#29B6F6</color>
    <color name="material_light_blue_500">#03A9F4</color>
    <color name="material_light_blue_600">#039BE5</color>
    <color name="material_light_blue_700">#0288D1</color>
    <color name="material_light_blue_800">#0277BD</color>
    <color name="material_light_blue_900">#01579B</color>
    <color name="material_light_blue_a100">#80D8FF</color>
    <color name="material_light_blue_a200">#40C4FF</color>
    <color name="material_light_blue_a400">#00B0FF</color>
    <color name="material_light_blue_a700">#0091EA</color>

    <!-- Grey -->
    <color name="material_grey_200">#EEEEEE</color>
    <color name="material_grey_300">#E0E0E0</color>
    <color name="material_grey_400">#BDBDBD</color>
    <color name="material_grey_500">#9E9E9E</color>
    <color name="material_grey_900">#212121</color>

    <string-array name="repeating_frequency_array">
        <item>@string/repeat_none</item>
        <item>@string/repeat_daily</item>
        <item>@string/repeat_weekly</item>
        <item>@string/repeat_monthly</item>
        <item>@string/repeat_annually</item>
        <item>@string/repeat_weekdays</item>
        <item>@string/repeat_weekends</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>