<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HelpActivity">

    <include
        android:id="@+id/toolbar_w_shadow"
        layout="@layout/toolbar_w_shadow"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/helpNiceMenuHolder"
        android:layout_below="@+id/toolbar_w_shadow"
        android:layout_alignParentTop="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/faqTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/faq"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/delete_reminder_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/delete_reminder_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/delete_reminder_help_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/delete_reminder_help_info" />

            <TextView
                android:id="@+id/remove_repeating_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/remove_repeating_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/remove_repeating_help_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/remove_repeating_help_info" />

            <TextView
                android:id="@+id/duplicate_reminders_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/duplicate_reminders_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/duplicate_reminders_help_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/duplicate_reminders_help_info" />
            
            <TextView
                android:id="@+id/snoozed_recurring_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/snoozed_recurring_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/snoozed_recurring_help_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/snoozed_recurring_help_info" />
            
            <TextView
                android:id="@+id/swipe_away_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/swipe_away_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/swipe_away_help_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/swipe_away_help_info" />
        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/helpNiceMenuHolder"
        android:background="@drawable/shadow_up_400"/>

    <RelativeLayout
        android:id="@+id/helpNiceMenuHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_grey" >

        <ImageButton
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@android:string/ok"
            android:src="@drawable/nice_menu_ok"
            android:paddingLeft="@dimen/small_margin" />

    </RelativeLayout>

</RelativeLayout>
